# vcap-qt

./: .gitignore  Application.cpp  Application.hpp  BooleanControl.cpp  BooleanControl.hpp  ButtonControl.cpp  ButtonControl.hpp  CMakeLists.txt  ControlWrapper.cpp  ControlWrapper.hpp  IntegerControl.cpp  IntegerControl.hpp  IntegerMenuControl.cpp  IntegerMenuControl.hpp  Iterator.hpp  IteratorDeleter.cpp  IteratorDeleter.hpp  LICENSE.md  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MenuControl.cpp  MenuControl.hpp  README.md  Stopwatch.cpp  Stopwatch.hpp  TODO.md  Utility.cpp  Utils.cpp  Utils.hpp  VcapQt.cpp  VcapQt.hpp  VcapQt.pro  VcapQt.ui  changeuser.sh  pico_time.h
cmake/: FindVcap.cmake
